# xdetr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/xdetr/: __init__.py  _version.py  blocks.py
tests/: test_timm_backbone_lora_rules.py
