[project]
name = "xdetr"
version = "0.1.0"
description = "Flexible toolkit for constructing DETR models"
readme = "README.md"
authors = [{ name = "Miller Wilt", email = "miller.wilt@hey.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
xdetr = "xdetr:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
