[project]
name = "xdetr"
version = "0.1.0"
description = "Flexible toolkit for constructing DETR models"
readme = "README.md"
authors = [{ name = "Miller Wilt", email = "miller.wilt@hey.com" }]
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "numpy>=2.4.2",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["jupyter>=1.1.1", "pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.15.4"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
lint.select = ["B", "E", "F", "I", "W", "UP", "C402", "C403", "C404", "C405"]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
